--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,10 +19,16 @@ android {
 
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        vectorDrawables {
+            useSupportLibrary true
+        }
     }
 
     packagingOptions {
-        pickFirst  '**'
+        pickFirst '**'
+        resources {
+            excludes += '/META-INF/{AL2.0,LGPL2.1}'
+        }
     }
 
 
@@ -44,13 +50,18 @@ android {
     }
     kotlinOptions {
         jvmTarget = '1.8'
+        apiVersion = '1.1'
+        languageVersion = '1.1'
     }
 }
 
 dependencies {
+    def activity_version = "1.6.1"
+    def room_version = "2.5.0"
+    def hilt_version = "2.44"
     def lifecycle_version = "2.6.0"
 
-    implementation 'androidx.core:core-ktx:1.9.0'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
@@ -70,4 +81,9 @@ dependencies {
     // retrofit & gson
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    // Room
+    implementation "androidx.room:room-runtime:$room_version"
+    // coil
+    implementation "io.coil-kt:coil:2.2.2"
+    implementation "androidx.activity:activity-ktx:$activity_version"
 }
