--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,15 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
+buildscript {
+    ext {
+        compose_ui_version = '1.2.0'
+    }
+    dependencies {
+        // other plugins...
+        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.44'
+    }
+}// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
     id 'com.android.application' version '7.4.1' apply false
     id 'com.android.library' version '7.4.1' apply false
     id 'org.jetbrains.kotlin.android' version '1.8.0' apply false
+    id 'com.google.dagger.hilt.android' version '2.44' apply false
 }
