add data domain and presentation layers and di layers

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.DogImageGenerator"
+        android:name=".MyApp"
         tools:targetApi="31">
         <activity
             android:name=".presentation.ImageGenerateActivity"
