--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
+    id 'com.google.dagger.hilt.android'
 }
 
 android {
@@ -53,37 +55,57 @@ android {
         apiVersion = '1.1'
         languageVersion = '1.1'
     }
+
+
 }
 
 dependencies {
     def activity_version = "1.6.1"
-    def room_version = "2.5.0"
+    def room_version = "2.5.1"
     def hilt_version = "2.44"
     def lifecycle_version = "2.6.0"
 
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+
     // coroutines
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.7.0-Beta"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.0-Beta"
+
     // ViewModel
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
+
     // Livedata
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
+
     //Hilt for dependency
-    implementation 'com.google.dagger:hilt-android:2.44'
-    implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03"
+    implementation "com.google.dagger:hilt-android:2.44"
+    kapt "com.google.dagger:hilt-compiler:2.44"
+
     // retrofit & gson
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
     // Room
     implementation "androidx.room:room-runtime:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
+
     // coil
     implementation "io.coil-kt:coil:2.2.2"
+
+    // Kotlin Ktx
     implementation "androidx.activity:activity-ktx:$activity_version"
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.0'
+    // moshi
+    implementation("com.squareup.moshi:moshi:1.14.0")
+
+}
+
+kapt {
+    correctErrorTypes true
 }
