--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name=".MyApp"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -12,8 +13,10 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.DogImageGenerator"
-        android:name=".MyApp"
         tools:targetApi="31">
+        <activity
+            android:name=".presentation.HistoryActivity"
+            android:exported="false" />
         <activity
             android:name=".presentation.ImageGenerateActivity"
             android:exported="false"
